tests/negative/non_exhaustive_value.glyph
module neg

fn grade(n: number) -> string {
  return match n {
    1 => "one",
    2 => "two",
  }
}
